--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
 
   <header role="banner">
-    <h1>枯山水 Rock Gardens</h1>
+    <div class="main-title">
+      <h1><i lang="ja">枯山水</i></h1>
+      <h2>Rock Gardens</h2>
+    </div>
     <nav role="navigation">
       <ul>
         <li><a href="#">Viewing</a></li>
@@ -18,7 +21,8 @@
         <li><a href="#">Symbolism</a></li>
       </ul>
     </nav>
-    <p><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
+    <img src="images/banner.svg" alt="">
+    <p class="big-text"><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
     <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
   </header>
 
@@ -26,21 +30,24 @@
     <section>
       <article>
         <img src="images/Viewing.svg" alt="">
-        <h2><i lang="ja">閲覧</i> Viewing</h2>
+        <h3><i lang="ja">閲覧</i></h3>
+        <h4>Viewing</h4>
         <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
         <a href="#">Learn more about Viewing</a>
       </article>
 
       <article>
         <img src="images/gravel.svg" alt="">
-        <h2><i lang="ja">砂利</i> Gravel</h2>
+        <h3><i lang="ja">砂利</i></h3>
+        <h4>Gravel</h4>
         <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
         <a href="#">Learn more about Gravel</a>
       </article>
 
       <article>
         <img src="images/Symbolism.svg" alt="">
-        <h2><i lang="ja">象徴主義</i> Symbolism</h2>
+        <h3><i lang="ja">象徴主義</i></h3>
+        <h4>Symbolism</h4>
         <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
         <a href="#">Learn more about Symbolism</a>
       </article>
