--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body>
 
   <header role="banner">
-    <div class="main-title">
-      <h1><i lang="ja">枯山水</i></h1>
-      <h2>Rock Gardens</h2>
-    </div>
+    <h1><i lang="ja">枯山水</i></h1>
+    <h2 class="top-h2">Rock Gardens</h2>
     <nav role="navigation">
       <ul>
         <li><a href="#">Viewing</a></li>
@@ -21,34 +19,38 @@
         <li><a href="#">Symbolism</a></li>
       </ul>
     </nav>
-    <img src="images/banner.svg" alt="">
-    <p class="big-text"><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
-    <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+    <img class="banner-img" src="images/banner.svg" alt="">
+    <hr>
+    <div class="header-text">
+      <p class="big-text"><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
+      <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+    </div>
+    <hr class="hr-two">
   </header>
 
   <main role="main">
     <section>
       <article>
-        <img src="images/Viewing.svg" alt="">
-        <h3><i lang="ja">閲覧</i></h3>
-        <h4>Viewing</h4>
-        <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+        <img class="img-article" src="images/Viewing.svg" alt="">
+        <h2><i lang="ja">閲覧</i></h2>
+        <h3>Viewing</h3>
+        <p class="p-margin">A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
         <a href="#">Learn more about Viewing</a>
       </article>
 
       <article>
-        <img src="images/gravel.svg" alt="">
-        <h3><i lang="ja">砂利</i></h3>
-        <h4>Gravel</h4>
-        <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+        <img class="img-article" src="images/gravel.svg" alt="">
+        <h2><i lang="ja">砂利</i></h2>
+        <h3>Gravel</h3>
+        <p class="p-margin">Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
         <a href="#">Learn more about Gravel</a>
       </article>
 
       <article>
-        <img src="images/Symbolism.svg" alt="">
-        <h3><i lang="ja">象徴主義</i></h3>
-        <h4>Symbolism</h4>
-        <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+        <img class="img-article" src="images/Symbolism.svg" alt="">
+        <h2><i lang="ja">象徴主義</i></h2>
+        <h3>Symbolism</h3>
+        <p class="p-margin">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
         <a href="#">Learn more about Symbolism</a>
       </article>
     </section>
