Adjust the padding

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2><i lang="ja">閲覧</i></h2>
         <h3>Viewing</h3>
         <p class="p-margin">A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
-        <a href="#">Learn more about Viewing</a>
+        <a class="p-margin" href="#">Learn more about Viewing</a>
       </article>
 
       <article>
@@ -43,7 +43,7 @@
         <h2><i lang="ja">砂利</i></h2>
         <h3>Gravel</h3>
         <p class="p-margin">Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
-        <a href="#">Learn more about Gravel</a>
+        <a class="p-margin" href="#">Learn more about Gravel</a>
       </article>
 
       <article>
@@ -51,12 +51,13 @@
         <h2><i lang="ja">象徴主義</i></h2>
         <h3>Symbolism</h3>
         <p class="p-margin">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
-        <a href="#">Learn more about Symbolism</a>
+        <a class="p-margin" href="#">Learn more about Symbolism</a>
       </article>
     </section>
+    <hr class="hr-three">
 
     <footer role="contentinfo">
-      © 794 Heian Period
+      <small>© 794 Heian Period</small>
     </footer>
 
   </main>
