Start big screen

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-  <header role="banner">
-    <h1><i lang="ja">枯山水</i></h1>
-    <h2 class="top-h2">Rock Gardens</h2>
+  <header class="banner" role="banner">
+    <div class="logo">
+      <h1><i lang="ja">枯山水</i></h1>
+      <h2 class="top-h2">Rock Gardens</h2>
+    <div>
     <nav role="navigation">
       <ul>
         <li><a href="#">Viewing</a></li>
@@ -30,28 +32,28 @@
 
   <main role="main">
     <section>
-      <article>
+      <article class="figone">
         <img class="img-article" src="images/Viewing.svg" alt="">
         <h2><i lang="ja">閲覧</i></h2>
         <h3>Viewing</h3>
-        <p class="p-margin">A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
-        <a class="p-margin" href="#">Learn more about Viewing</a>
+        <p class="p-margin1">A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+        <a class="a-margin" href="#">Learn more about Viewing</a>
       </article>
 
-      <article>
-        <img class="img-article" src="images/gravel.svg" alt="">
+      <article class="figtwo">
+        <img class="img-article2" src="images/gravel.svg" alt="">
         <h2><i lang="ja">砂利</i></h2>
         <h3>Gravel</h3>
-        <p class="p-margin">Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
-        <a class="p-margin" href="#">Learn more about Gravel</a>
+        <p class="p-margin2">Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+        <a class="a-margin" href="#">Learn more about Gravel</a>
       </article>
 
-      <article>
+      <article class="figthree">
         <img class="img-article" src="images/Symbolism.svg" alt="">
         <h2><i lang="ja">象徴主義</i></h2>
         <h3>Symbolism</h3>
-        <p class="p-margin">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
-        <a class="p-margin" href="#">Learn more about Symbolism</a>
+        <p class="p-margin1">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+        <a class="a-margin" href="#">Learn more about Symbolism</a>
       </article>
     </section>
     <hr class="hr-three">
