--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="logo">
       <h1><i lang="ja">枯山水</i></h1>
       <h2 class="top-h2">Rock Gardens</h2>
-    <div>
+    </div>
     <nav role="navigation">
       <ul>
         <li><a href="#">Viewing</a></li>
