--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
 
   <header class="banner" role="banner">
-    <div class="logo">
-      <h1><i lang="ja">枯山水</i></h1>
-      <h2 class="top-h2">Rock Gardens</h2>
-    </div>
+    <h1>
+        <i lang="ja">枯山水</i> Rock Gardens
+    </h1>
     <nav role="navigation">
       <ul>
         <li><a href="#">Viewing</a></li>
@@ -21,16 +20,53 @@
         <li><a href="#">Symbolism</a></li>
       </ul>
     </nav>
-    <img class="banner-img" src="images/banner.svg" alt="">
-    <hr>
-    <div class="header-text">
-      <p class="big-text"><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
-      <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
-    </div>
-    <hr class="hr-two">
   </header>
 
   <main role="main">
+    <img class="banner-img" src="images/banner.svg" alt="">
+    <div class="header-text">
+      <p class="big-text"><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
+      <p class="text-size-h1">Imitate the intimate essence of nature & discover the true meaning of life.</p>
+    </div>
+
+    <section>
+      <article class="figone">
+        <figure>
+          <img class="img-article" src="images/Viewing.svg" alt="">
+          <h2><i lang="ja">閲覧</i></h2>
+          <h3>Viewing</h3>
+          <figcaption class="p-margin1">A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</figcaption>
+        </figure>
+        <a class="a-margin" href="#">Learn more about Viewing</a>
+      </article>
+
+      <article class="figtwo">
+        <figure>
+          <img class="img-article2" src="images/gravel.svg" alt="">
+          <h2><i lang="ja">砂利</i></h2>
+          <h3>Gravel</h3>
+          <figcaption class="p-margin2">Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</figcaption>
+        </figure>
+        <a class="a-margin" href="#">Learn more about Gravel</a>
+      </article>
+
+      <article class="figthree">
+        <figure>
+          <img class="img-article" src="images/Symbolism.svg" alt="">
+          <h2><i lang="ja">象徴主義</i></h2>
+          <h3>Symbolism</h3>
+          <figcaption class="p-margin1">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</figcaption>
+        </figure>
+        <a class="a-margin" href="#">Learn more about Symbolism</a>
+      </article>
+    </section>
+  </main>
+
+  <footer role="contentinfo">
+    <small>© 794 Heian Period</small>
+  </footer>
+
+  <!-- <main role="main">
     <section>
       <article class="figone">
         <img class="img-article" src="images/Viewing.svg" alt="">
@@ -60,9 +96,9 @@
 
     <footer role="contentinfo">
       <small>© 794 Heian Period</small>
-    </footer>
+    </footer> -->
+<!--
+  </main> -->
 
-  </main>
-
-</body>
+  </body>
 </html>
