--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img class="banner-img" src="images/banner.svg" alt="">
     <div class="header-text">
       <p class="big-text"><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
-      <p class="text-size-h1">Imitate the intimate essence of nature & discover the true meaning of life.</p>
+      <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
     </div>
 
     <section>
@@ -65,40 +65,5 @@
   <footer role="contentinfo">
     <small>© 794 Heian Period</small>
   </footer>
-
-  <!-- <main role="main">
-    <section>
-      <article class="figone">
-        <img class="img-article" src="images/Viewing.svg" alt="">
-        <h2><i lang="ja">閲覧</i></h2>
-        <h3>Viewing</h3>
-        <p class="p-margin1">A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
-        <a class="a-margin" href="#">Learn more about Viewing</a>
-      </article>
-
-      <article class="figtwo">
-        <img class="img-article2" src="images/gravel.svg" alt="">
-        <h2><i lang="ja">砂利</i></h2>
-        <h3>Gravel</h3>
-        <p class="p-margin2">Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
-        <a class="a-margin" href="#">Learn more about Gravel</a>
-      </article>
-
-      <article class="figthree">
-        <img class="img-article" src="images/Symbolism.svg" alt="">
-        <h2><i lang="ja">象徴主義</i></h2>
-        <h3>Symbolism</h3>
-        <p class="p-margin1">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
-        <a class="a-margin" href="#">Learn more about Symbolism</a>
-      </article>
-    </section>
-    <hr class="hr-three">
-
-    <footer role="contentinfo">
-      <small>© 794 Heian Period</small>
-    </footer> -->
-<!--
-  </main> -->
-
-  </body>
+</body>
 </html>
